# hf-resource-scanner

./: Makefile  README.md  pyproject.toml
HFResourceScanner/: __init__.py  scanner.py
examples/: aimcallback.py  callback.py  sfttrainer.py
src/: HFResourceScanner.py  utils.py
