[project]
name = "HFResourceScanner"
version = "0.1.0"
authors = [
  { name="Chander Govindarajan", email="mail@chandergovind.org" },
]
description = "Scan resources used during training using HFTrainer"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "peft"
]

[tool.setuptools]
packages = ["HFResourceScanner"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"